bootstrap/core/cilium/extras/cilium-public.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: cilium-public
spec:
  controller: io.cilium/ingress-controller
