bootstrap/core/cilium/extras/gateway-access.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: glance-gateway-access
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: ALL
  to:
    - group: gateway.networking.k8s.io
      kind: Gateway
