bootstrap/core/cilium/extras/gateway-controller.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: cilium
  namespace: kube-system
spec:
  controllerName: io.cilium/gateway-controller
