bootstrap/core/cilium/extras/external-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: external-gateway
  namespace: kube-system
spec:
  gatewayClassName: cilium
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      hostname: "*.wheezy.fr"
    - name: https
      port: 443
      protocol: HTTPS
      hostname: "*.wheezy.fr"
      tls:
        mode: Terminate
        certificateRefs:
          - name: wildcard-wheezy-fr-tls
            namespace: kube-system
