bootstrap/core/cilium/extras/internal-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: internal-gateway
spec:
  gatewayClassName: cilium
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      hostname: "*.wheezy.lab"
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      port: 443
      protocol: HTTPS
      hostname: "*.wheezy.lab"
      tls:
        mode: Terminate
        certificateRefs:
          - name: wildcard-wheezy-lab-tls
            namespace: kube-system
      allowedRoutes:
        namespaces:
          from: All
